# mndy

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  docker-compose.arm.yml  docker-compose.yml  package.json  pyproject.toml  vitest.config.ts
.claude/: mcp.json  (+1 more)
src/azdo-worker/: .env.template  Dockerfile  main.py  pyproject.toml  requirements.txt
src/azdo-worker/src/: .env  main.py  run.sh
src/azdo-worker/src/core/: __init__.py  gather_project_units_of_work_workflow.py  map.py  prop_mappings.py
src/azdo-worker/src/endpoints/: __init__.py
src/mndy-framework/: README.md  build.sh  install.sh  main.py  pyproject.toml  requirements.txt
src/mndy-framework/mndy_framework/: __init__.py
src/mndy-framework/mndy_framework/actors/: __init__.py  proc_actor_interface.py
src/mndy-framework/mndy_framework/comms/: __init__.py  azdo_http_client.py  azdo_url_builder.py  dapr_client.py  get_wi_details_cmd_processor.py  get_wis_by_wiql_cmd_processor.py  get_wis_list_cmd_processor.py  url_builder.py
src/mndy-framework/mndy_framework/types/: __init__.py  cloud_evt.py  cmd_types.py  dapr_configs.py  models.py  naming.py  proc_statuses.py  rag_statuses.py  root_cmd.py  struct_configs.py  unit_types.py  units.py
src/mndy-framework/mndy_framework/utils/: __init__.py  compression.py  dict_fns.py  enum_fns.py  env_var_provider.py  hashing.py  list_fns.py  moment.py
src/workflows-worker/: .env.template  Dockerfile  main.py  pyproject.toml
src/workflows-worker/src/: main.py  run.sh
src/workflows-worker/src/actors/: actor_factory.py  proc_actor.py
(+618 files in other folders)
