[project]
name = "mndy-framework"
version = "0.1.0"
description = "Shared framework for mndy project metrics platform"
readme = "README.md"
authors = [{name = "Simon Stipcich", email = "code.stip.si@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
  'environs',
  'pydantic',
  'dapr>=1.15.0',
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
